--- a/src/styles/components/_auth.scss
+++ b/src/styles/components/_auth.scss
@@ -30,7 +30,7 @@
     margin-bottom: 10px;;
 
     &:focus{
-        border-bottom: 1px solid $secundary ;
+        border-bottom: 1px solid $ligth ;
         outline:none
     }
 }
